# flarion

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  flarion.toml
.cargo/: config.toml
.github/workflows/: ci.yml
assets/: flarion-mark.ascii.txt
scripts/: generate-ascii-fallback.rs
src/: auth.rs  config.rs  error.rs  lib.rs  main.rs  metrics.rs  server.rs
src/admin/: config.rs  gpus.rs  mod.rs  models.rs  requests.rs  routes.rs  state.rs  status.rs  tracker.rs  types.rs  version.rs
src/api/: chat.rs  health.rs  mod.rs  models.rs  types.rs
src/cli/: branding.rs  cache.rs  client.rs  endpoint.rs  endpoint_file.rs  error.rs  mod.rs  resolve.rs
src/cli/commands/: chat.rs  completions.rs  config.rs  endpoints.rs  gpu.rs  health.rs  login.rs  mod.rs  models.rs  requests.rs  routes.rs  serve.rs  status.rs  version.rs
src/cli/commands/chat/: mod.rs  repl.rs  stream.rs
src/engine/: anthropic.rs  backend.rs  llama.rs  mod.rs  openai.rs  registry.rs  scheduling.rs  testing.rs  vram_detect.rs
src/engine/hf/: mod.rs
src/engine/llama/: inference.rs  mod.rs  protocol.rs  worker.rs
src/routing/: matchers.rs  mod.rs  routed_backend.rs  rules.rs  trace.rs
tests/: admin_api.rs  cli_dispatch.rs  client_http.rs  e2e_cli_smoke.rs  routing.rs  scheduling.rs  security.rs  streaming.rs
ui/: README.md  package-lock.json  package.json  svelte.config.js  vite.config.ts
ui/src/: app.css  app.d.ts  app.html
ui/src/lib/api/: client.ts  metrics.ts  streaming.ts  types.ts
ui/src/lib/components/: Sidebar.svelte  (+4 more)
ui/src/routes/: +layout.svelte  +page.svelte
(+29 files in other folders)
