[package]
name = "flarion"
version = "0.9.0"
edition = "2024"
license = "MIT"
description = "A Rust-native LLM inference gateway"
repository = "https://github.com/krishs05/flarion"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
llama-cpp-2 = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
tokio-stream = "0.1"
tower-http = { version = "0.6", features = ["cors", "timeout", "trace"] }
thiserror = "2"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
futures-util = "0.3"
anyhow = "1"
encoding_rs = "0.8.35"
reqwest = { version = "0.12", features = ["json", "stream"] }
eventsource-stream = "0.2"
subtle = "2"
regex = "1"
metrics = "0.24"
metrics-exporter-prometheus = { version = "0.17", default-features = false }
url = "2"
nvml-wrapper = "0.10"

[dev-dependencies]
http-body-util = "0.1"
tower = { version = "0.5", features = ["util"] }
tempfile = "3"

[features]
default = []
cuda = ["llama-cpp-2/cuda"]
